--- a/styles/diaryButton.css
+++ b/styles/diaryButton.css
@@ -1,3 +1,10 @@
+.diary-window-record{
+    padding-top: 4px;
+    padding-left: 10px;
+    margin-top: 0;
+    margin-bottom: 6px;
+}
+
 #diary-courses-button {
     width: 40%;
     justify-self: center;
