--- a/styles/diaryButton.css
+++ b/styles/diaryButton.css
@@ -5,7 +5,7 @@
     margin-bottom: 6px;
 }
 
-/* Кнопка добавления записи */
+/* Кнопка добавления записи .*/
 .button, #diary-courses-button {
     display: inline-block;
     font: inherit;
